<resources>
    <string name="app_name">DEV322 Project DASSH</string>
    <string name="start">Start</string>
    <string name="pause">Pause</string>
    <string name="reset">Reset</string>
    
    <!-- Welcome Fragment Strings -->
    <string name="welcome_title">Welcome to DASSH</string>
    <string name="welcome_description">Your personal fitness and activity tracking companion</string>
    <string name="features_title">Features:</string>
    <string name="features_list">• Precision Stopwatch Timer\n• Motion &amp; Activity Tracking\n• GPS Location Services\n• Real-time Sensor Data</string>
    <string name="start_timer">Start Timer</string>
    
    <!-- Timer Fragment Strings -->
    <string name="timer_label">Timer</string>
    <string name="steps_label">Steps</string>
    <string name="distance_label">Distance</string>
    <string name="speed_label">Speed</string>
    <string name="route_map_label">Route Map</string>
</resources>